--- a/css/layout.css
+++ b/css/layout.css
@@ -309,6 +309,45 @@ input:-moz-placeholder {
 	.b-orange-butt:hover{
 		
 	}
+.b-text {
+	text-align: left;
+}
+	.b-text h2 {
+		font-size: 35px;
+	    font-family: "pf_bague_sans_prolight";
+	    text-transform: uppercase;
+	    line-height: 1.2;
+	    letter-spacing: 6px;
+	    text-align: center;
+	}
+	.b-text h3 {
+		font-size: 18px;
+	    font-family: "pf_bague_sans_problack";
+	    text-transform: uppercase;
+	    line-height: 1.2;
+	    margin-bottom: 0;
+	    margin-top: 25px;
+	}
+	.b-text p {
+		font-size: 18px;
+		font-family: "pf_bague_sans_proregular";
+		color: rgb(0, 0, 0);
+		line-height: 1.4;
+		margin-top: 25px;
+	}
+	.b-text ul {
+		margin-left: 30px;
+		margin-top: 25px;
+	}
+		.b-text ul li {
+			font-size: 18px;
+			font-family: "pf_bague_sans_proregular";
+			color: rgb(0, 0, 0);
+			line-height: 1.5;
+			list-style-type: disc;
+			padding-left: 5px;
+		}
+
 .title {
 	font-size: 35px;
 	font-family: "pf_bague_sans_prolight";
@@ -747,25 +786,6 @@ input:-moz-placeholder {
 				width: 670px;
 				margin-top: 38px;
 			}
-				.b-desc .b-block .text-desc .left p {
-					font-size: 18px;
-					font-family: "pf_bague_sans_proregular";
-					color: rgb(0, 0, 0);
-					line-height: 1.4;
-					margin-top: 25px;
-				}
-				.b-desc .b-block .b-text ul {
-					margin-left: 30px;
-					margin-top: 25px;
-				}
-					.b-desc .b-block .b-text ul li {
-						font-size: 18px;
-						font-family: "pf_bague_sans_proregular";
-						color: rgb(0, 0, 0);
-						line-height: 1.5;
-						list-style-type: disc;
-						padding-left: 5px;
-					}
 			.b-desc .b-block .text-desc .right {
 				width: 290px;
 				margin-top: -6px;
