--- a/css/layout-mobile.css
+++ b/css/layout-mobile.css
@@ -943,13 +943,13 @@ margin-bottom: 45px;
 						float: none !important;
 					}
 						.b-townhouse .house-list li .number {
-						position: absolute;
-						font-size: 21px;
-						font-family: "pf_bague_sans_promedium";	
-						line-height: 1.2;
-						top: 70px;
-						left: -35px;
-						color: #c2b9b3;
+							position: absolute;
+						    font-size: 40px;
+						    font-family: "pf_bague_sans_promedium";
+						    line-height: 1.2;
+						    top: 70px;
+						    left: -55px;
+						    color: #c2b9b3;
 					}
 							.b-townhouse .house-list li .house-cont:hover .number{
 								color: rgb(58, 32, 42);
@@ -975,7 +975,7 @@ margin-bottom: 45px;
 								.b-townhouse .house-list li .house-cont h6 span sup {
 									font-size: 10px;
 								}
-							.b-townhouse .house-list li .house-cont a {
+							.b-townhouse .house-list li .house-cont p {
 								font-size: 24px;
 								font-family: "pf_bague_sans_promedium";
 								color: #813004;
@@ -984,7 +984,7 @@ margin-bottom: 45px;
 								margin-top: 22px;
 								display: block;
 							}
-								.b-townhouse .house-list li .house-cont a:hover {
+								.b-townhouse .house-list li .house-cont p:hover {
 									text-decoration: none;
 								}
 .b-contacts {
@@ -1006,3 +1006,85 @@ margin-bottom: 45px;
 		    text-transform: uppercase;
 		    line-height: 1.8;
 		}
+.b-genplan{
+	display: none;
+}
+.b-genplan-popups{
+	display: block !important;
+}
+.b-genplan-popups li {
+	background-color: #F7F6F2;
+	padding: 25px 25px;
+	margin-bottom: 20px;
+}
+.b-genplan-popups li h2{
+	text-align: left;
+	margin: 20px 0px;
+}
+.b-genplan-popups li h3{
+
+}
+.b-genplan-popups li h4{
+
+}
+.b-genplan-popups li.b-house{
+	background-color: transparent;
+}
+.b-genplan-popups li.b-house h2{
+	
+}
+	.b-genplan-popups li .top-board >div, .b-genplan-popups li .bot-board >div{
+		max-width: 293px;
+		float: left;
+		padding-right: 17px;
+		padding-left: 17px;
+		border-right: 1px solid #cbb7a9;
+		min-width: 188px;
+		text-align: left;
+	}
+	.b-genplan-popups li .top-board .first, .b-genplan-popups li .bot-board .first {
+		padding-left: 0;
+	}
+	.b-genplan-popups li .top-board .last, .b-genplan-popups li .bot-board .last {
+		border-right: none;
+	}
+
+	.b-genplan-popups li .top-board {
+		padding-bottom: 20px;
+		border-bottom: 1px solid #7f2e04;
+	}
+	.b-genplan-popups li .bot-board {
+		margin-top: 20px;
+	}
+		.b-genplan-popups li h5{
+			font-size: 32px;
+			line-height: 1.2;
+			letter-spacing: 1.3px;
+		}
+		
+			.b-genplan-popups li h6{
+				font-size: 32px !important;
+				line-height: 1.2;
+				text-align: left;
+				margin-top: 8px;
+			}
+				.b-genplan-popups li h6 sup{
+					font-size: 10px;
+			}
+			.b-genplan-popups li a{
+				margin-top: -15px;
+				font-size: 32px;
+				line-height: 40px;
+				letter-spacing: 4px;
+				background-color: #71340F;
+				padding: 20px 20px;
+				color: #fff;
+				font-family: "pf_bague_sans_prolight";
+				display: inline-block;
+			}
+
+
+
+
+
+
